<resources>
    <string name="app_name">task 1</string>

    <string name="tuesday">Sal, 02 Nisan</string>
    <string name="wednesday">Çar, 03 Nisan</string>
    <string name="thursday">Per, 04 Nisan</string>
    <string name="friday">Cum, 05 Nisan</string>

    <string name="tuesday_degree">14° -  27°</string>
    <string name="wednesday_degree">14° -  27°</string>
    <string name="thursday_degree">14° -  27°</string>
    <string name="friday_degree">14° -  27°</string>

    <string name="city">İstanbul</string>
    <string name="day">Bugün</string>
    <string name="degree">26°</string>
    <string name="weather_situation">Güneşli</string>
    <string name="wind">Rüzgar</string>
    <string name="wind_situation">3 km/s</string>
    <string name="date">01 Nisan 2023</string>

    <string name="weather_situation_image">weather situation image</string>
    <string name="wind_image">wind image</string>
    <string name="tuesday_weather">tuesday weather</string>
    <string name="wednesday_weather">wednesday weather</string>
    <string name="thursday_weather">thursday weather</string>
    <string name="friday_weather">friday weather</string>

    <string name="refresh">refresh</string>

    <string name="button">Verileri Güncelle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sunny">Güneşli</string>
    <string name="windy">Rüzgarlı</string>
    <string name="rainy">Yağmurlu</string>
    <string name="snowy">Karlı</string>



</resources>