<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background_tint"
    android:backgroundTintMode="multiply"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#101010"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="80dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/weather_situation_image"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/weather_situation_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_sunny_2" />

            <TextView
                android:id="@+id/degree"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:text="@string/degree"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_degree"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="@dimen/margin_16"
                android:fontFamily="sans-serif-medium"
                android:text="@string/city"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/weather_situation"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="36dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/weather_situation"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_weather"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_situation_image" />

            <TextView
                android:id="@+id/degree_gap"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tuesday_degree"
                android:textColor="@color/color_text"
                app:layout_constraintBottom_toTopOf="@+id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/degree" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>